Fixed - Map appears at top of page on mobile

--- a/src/sass/templates/_contact-us.scss
+++ b/src/sass/templates/_contact-us.scss
@@ -1,6 +1,11 @@
 .contact-us {
   @include outer-container;
 
+  .sidebar.contact {
+    float: right;
+    margin-right: 0px;
+  }
+
   &__left {
     @include span-columns(8);
   }
